--- a/app/src/main/res/layout/fragment_detales.xml
+++ b/app/src/main/res/layout/fragment_detales.xml
@@ -94,7 +94,7 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="@string/size"
-                    android:inputType="textPersonName"
+                    android:inputType="number"
                     android:minHeight="48dp"
                     android:textColor="@color/white" />
 
