--- a/app/src/main/res/layout/fragment_detales.xml
+++ b/app/src/main/res/layout/fragment_detales.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="shoe"
+            type="com.example.shoestore.data.Show"/>
+    </data>
+    <!--Used constraintlayout to organize the complex components -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -33,7 +38,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView23">
-
+            <!--very easy structure for constant layout-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -52,10 +57,10 @@
 
                 <EditText
                     android:id="@+id/name_edit_txt"
-
                     style="@style/detal_edit_txt"
                     android:layout_width="match_parent"
                     android:hint="@string/name"
+                    android:text="@={shoe.name}"
                     android:textColor="@color/white" />
 
                 <TextView
@@ -72,6 +77,7 @@
                     style="@style/detal_edit_txt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:text="@={shoe.company}"
                     android:ems="10"
                     android:hint="@string/cmp"
                     android:inputType="textPersonName"
@@ -94,6 +100,7 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="@string/size"
+                    android:text="@={shoe.size}"
                     android:inputType="number"
                     android:minHeight="48dp"
                     android:textColor="@color/white" />
@@ -112,6 +119,7 @@
                     style="@style/detal_edit_txt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:text="@={shoe.description}"
                     android:ems="10"
                     android:hint="@string/detal"
                     android:inputType="textPersonName"
